# whisperlib2

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  format_all.sh
bazel/: BUILD  ar_wrapper.bzl  icu.BUILD  openssl.BUILD
docker/: Dockerfile  README.md  install-ubuntu.sh
whisperlib/base/: BUILD.bazel  app.cc  app.h  call_on_return.h  free_list.h  free_list_test.cc
whisperlib/io/: BUILD.bazel  cord_io.cc  cord_io.h  errno.cc  errno.h  file.cc  file.h  filesystem.cc  filesystem.h  filesystem_test.cc  path.cc  path.h  path_test.cc
whisperlib/net/: BUILD.bazel  address.cc  address.h  address_test.cc  connection.cc  connection.h  dns_resolve.cc  dns_resolve.h  dns_resolve_test.cc  selectable.cc  selectable.h  selector.cc  selector.h  selector_event_data.h  selector_loop.cc  selector_loop.h  selector_test.cc  ssl_connection.cc  ssl_connection.h  timeouter.cc  timeouter.h
whisperlib/status/: BUILD.bazel  status.cc  status.h  status_test.cc  testing.h
whisperlib/sync/: BUILD.bazel  producer_consumer_queue.h  producer_consumer_queue_lockfree.h  producer_consumer_queue_test.cc  thread.cc  thread.h
whisperlib/sync/moody/: BUILD.bazel  blockingconcurrentqueue.h  concurrentqueue.h
whisperlib/sys/: BUILD.bazel  signal_handlers.cc  signal_handlers.h  signal_handlers_test.cc  stack_trace.h
