load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "sync",
    hdrs = [
        "producer_consumer_queue.h",
        "producer_consumer_queue_lockfree.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//whisperlib/base",
        "//whisperlib/status",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/synchronization",
        "@com_google_absl//absl/time",
    ],
)

cc_test(
    name = "producer_consumer_queue_test",
    srcs = ["producer_consumer_queue_test.cc"],
    deps = [
        ":sync",
        "@com_google_googletest//:gtest_main",
    ],
)
